add bench - compare with prismatic.graph